-Résolution du bug qui empêchait l'application de se terminer correctement - Ajout formulaire formPath

--- a/projetMetro/formAdmin.resx
+++ b/projetMetro/formAdmin.resx
@@ -275,7 +275,7 @@
         0nXpvvRIsveEx9JD6a5kf4Z8Iu3xOt/Z+R/9rp4+xdEZwwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="metroTile7.TileImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="mTilePath.TileImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         EwAACxMBAJqcGAAAA/ZJREFUeF7tm71rFEEYh5OYWBgtjGCRCFGrBLTRQiGC/gEqicTCzsJoY9qIlf4B
