--- a/projetMetro/formAdmin.resx
+++ b/projetMetro/formAdmin.resx
@@ -184,7 +184,7 @@
         1bo13YlnkiRJkiRJkiRJkiRJkuqMRr8Aev/77hB3KAIAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="metroTile9.TileImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="metroTilePathBD.TileImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         EgAACxIB0t1+/AAAABl0RVh0U29mdHdhcmUAcGFpbnQubmV0IDQuMC4yMfEgaZUAAA3USURBVHhe7Zx3
